--- a/public_html/css/site.css
+++ b/public_html/css/site.css
@@ -1,20 +1,32 @@
-*  {	font-family: 'Calibri';  color: #132578; }
+*  {    font-family: 'Calibri';  color: #132578; }
 #page-home { background: url(../images/fon.png) top center no-repeat; overflow: hidden;}
 .container {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translateX(-50%) translateY(-50%);
+    -webkit-transform: translateX(-50%) translateY(-50%);
+        -ms-transform: translateX(-50%) translateY(-50%);
+            transform: translateX(-50%) translateY(-50%);
     text-align: center;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    width: 100%;}
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    width: 100%;-webkit-flex-wrap: wrap;
+-moz-flex-wrap: wrap;
+-ms-flex-wrap: wrap;
+-o-flex-wrap: wrap;
+flex-wrap: wrap;
+}
 .img-fluid {
     max-width: 940px;
     height: auto;   
     text-align: center;
     margin: 0 auto;   }
 .img-fluid2 {max-width: 1300px;}
-.main-box{display: flex;}
+.main-box{display: -webkit-box;display: -ms-flexbox;display: flex;}
 .main-box, 
 .main-box p{
     font-family: 'Calibri';
@@ -26,7 +38,7 @@
     font-weight: 700;
     color: #132578;
     text-align: center }
-small {	font-size: 60%;; }
+small { font-size: 60%;; }
 .main-box h1{
     font-size: 80px;
     color: #c51868;
@@ -52,18 +64,25 @@ small {	font-size: 60%;; }
 .col-lgg-7{
     width: 52%;}
 .col-lg-5{
+    text-align: center;
     width: 48%;
-    display: -webkit-box;
+/*    display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
+-webkit-flex-wrap: wrap;
+-moz-flex-wrap: wrap;
+-ms-flex-wrap: wrap;
+-o-flex-wrap: wrap;
+flex-wrap: wrap;
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
-            align-items: center;}
+             -webkit-align-items: center;
+    align-items: center;*/}
 .col-lgg-7{
     position: relative;
 /*    background-image: url(../images/car2.png);*/
@@ -73,6 +92,8 @@ small {	font-size: 60%;; }
     background-size: 1500px;
     overflow: visible;}
 .main-box {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     padding: 50px 112px 50px 0;}
 .li2 span{
@@ -85,18 +106,42 @@ small {	font-size: 60%;; }
 }
 .main-box h1 {
     margin-top: 0;}
+.main-box ul {
+    max-width: 100%;
+    box-sizing: border-box;}
 /*
 @media only screen and (max-width: 360px) {
-.main, .main p{	font-size: .8em;}
-small {	font-size: .7em; }   
+.main, .main p{ font-size: .8em;}
+small { font-size: .7em; }   
 }
 */   
+/*.link-p {
+    border-bottom: 3px solid #132578;}*/
+.link-p .main-link{text-decoration: underline; 
+}
+.main-box{width: 100%;}
+@media screen and (-webkit-min-device-pixel-ratio:0){
+.img-fluid2 {
+    max-width: 674px;
+    position: fixed;
+    left: 0;
+    bottom: 2%;} 
+    
+}
+html:root*.img-fluid2 {    position: fixed;}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {  
+    .main-box li {
+         display: inline-block;}
+    .main-box ul  {display: table-cell;}    
+}
+
 @media only screen and (max-width: 1920px) { 
     .img-fluid {
         max-width: 620px;}
     .img-fluid2 {
         max-width: 760px;
         position: absolute;
+    position: fixed;
         left: 0;
         bottom: 2%;}
     .main-box h1{
@@ -104,8 +149,11 @@ small {	font-size: .7em; }
         color: #c51868;
         line-height: 65px;}
     .main-box ul{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-wrap: wrap;}
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;}
     .main-box ul {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -129,6 +177,17 @@ small {	font-size: .7em; }
     display: inline;
     text-align: center;
     line-height: 45px;}
+/*.main-box li{
+    color: #132578;
+    font-size: 50px;
+    list-style-type: none;
+    position: relative;
+    line-height: 55px;
+    width: auto;
+    display: inline-block;
+    text-align: center;}*/
+
+
 .main-box li:before {
     position: absolute;
     content: '';
@@ -142,7 +201,8 @@ small {	font-size: .7em; }
 .col-lgg-7{
     width: 49%;}
 .col-lg-5{
-    width: 51%;}
+    width: 51%;
+    box-sizing: border-box;}
 .col-lgg-7{
 /*    background-image: url(../images/car2.png);*/
     background-size: cover;
@@ -150,6 +210,11 @@ small {	font-size: .7em; }
     background-position: left;
     background-size: cover;
     overflow: visible;}
+}
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {  
+    .main-box li {
+         display: inline-block;}
+    .main-box ul  {display: table-cell;}    
 }
 @media only screen and (min-width: 2400px) and (max-width: 3200px){
     #page-home {
@@ -229,7 +294,7 @@ small {	font-size: .7em; }
         bottom: 14%;}
     .main-box h1 {font-size: 69px;}
     .img-fluid {
-        max-width: 740px;
+        max-width: 675px;
         height: auto;
         text-align: center;
         margin: 0 auto;}
@@ -238,6 +303,32 @@ small {	font-size: .7em; }
         left: -37px;}
     .main-box .li1:before{  left: 18px;}
     .main-box .li2:before {left: -41px;}
+    .img-fluid2 {
+        max-width: 91%;
+        position: absolute;
+        left: 0;
+        bottom: 5%;}
+    .main-box li {
+        color: #132578;
+        font-size: 38px;
+        width: auto;
+        display: inline;
+        text-align: center;
+        line-height: 45px;}
+    .main-box h1 {
+        font-size: 61px;}
+    .main-box li {
+        font-size: 38px;
+        line-height: 45px;}
+}
+@media only screen and (max-height: 900px) and (max-width: 1980px){
+    .img-fluid {max-width: 25vw;}
+    .main-box h1 { font-size: 49px;}
+    .main-box li {
+        font-size: 45px;
+        line-height: 46px;}
+    .col-lg-5 a {margin-top: 5px;}
+        .main-box ul{margin: 0;}
 }
 @media only screen and (max-height: 1080px) and (max-width: 1920px){
     .main-box h1 {margin-bottom: 0;}
@@ -247,41 +338,101 @@ small {	font-size: .7em; }
     .main-box h1 {font-size: 56px;}
     .col-lg-5 a {margin-top: 25px;}
 }
+@media only screen and (max-height: 750px) and (max-width: 1920px){
+    .img-fluid {
+        max-width: 28vw;}
+    .main-box li {
+        font-size: 37px;
+        line-height: 42px;}
+    .img-fluid2 {
+        max-width: 90%;
+        position: absolute;
+        left: 0;
+        bottom: 1%;}
+
+}
+@media only screen and (max-height: 670px) and (max-width: 1920px){
+    .img-fluid {max-width: 25vw;}
+    .main-box li {
+        font-size: 37px;
+        line-height: 39px;}
+ }
+@media only screen and (max-height: 650px) and (max-width: 1920px){
+.img-fluid {
+    max-width: 23vw;}
+}
 @media only screen and (max-width: 1700px) { 
     .main-box {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
         padding: 50px 8px 50px 0;}
     .col-lg-5 a {
-        font-size: 38px;
+        font-size: 37px;
         margin-top: 20px;
         display: inline-block;}
     .img-fluid {
-        width: 35vw;}
+        width: 31vw;}
     .col-lg-5 {
         width: 51%;
-        padding-top: 20px;
-        padding-bottom: 10px;}
+        padding-top: 10px;
+        padding-bottom: 5px;}
     .main-box h1 {
-        margin-bottom: 10px;}
+        margin-bottom: 3px;}
+
+}
+@media only screen and (max-height: 800px) and (max-width: 1920px){
+    .img-fluid {max-width: 26vw;}
+    .main-box ul{margin: 0;}
+    .main-box h1 {font-size: 49px; line-height: 50px;}
+    .col-lg-5 a {margin-top: 5px;}
+    .main-box li {
+        font-size: 37px;
+        line-height: 40px;}
+    .main-box li:before {top: 17px;}
+}
+@media only screen and (max-height: 650px) and (max-width: 1920px){
+    .img-fluid {
+        max-width: 25vw;}
+    .col-lg-5 a {
+        margin-top: 0;}
 
 }
 @media only screen and (max-height: 1050px) and (max-width: 1680px){
-    .col-lg-5 a {margin-top: 10px;}
+    .col-lg-5 a {margin-top: 3px;}
 }
 @media only screen and (max-height: 900px) and (max-width: 1800px){
     .col-lg-5 a {margin-top: 0;}
     .main-box ul{margin-bottom: 5px;}
-    .main-box h1 {font-size: 53px;}
+    .main-box h1 {font-size: 52px;}
 }
 @media only screen and (max-height: 900px) and (max-width: 1600px){
     .col-lg-5 a {margin-top: 0;}
     .main-box ul{margin-bottom: 5px;}
-    .main-box h1 {font-size: 53px;}
+    .main-box h1 {font-size: 49px;}
     .main-box h1 { margin-bottom: 0;}
     .main-box .li1:before {left: -1px;}
-    .img-fluid {width: 34vw;}
+    .img-fluid {width: 31vw;}
 }
+@media only screen and (max-height: 800px) and (max-width: 1670px){
+    .img-fluid { width: 31vw;}
+    .main-box h1 { margin-bottom: 0;}
 
+}
+@media only screen and (max-height: 780px) and (max-width: 1680px){
+    .col-lg-5 a {margin-top: 2px;}
+    .img-fluid {width: 31vw;}
+    .main-box h1 {margin-bottom: 0;}
+    .main-box ul{margin-top: 3px; margin-bottom: 1px;}
+
+}
+@media only screen and (max-height: 730px) and (max-width: 1680px){
+    .col-lg-5 a {margin-top: 2px;}
+    .img-fluid {width: 30vw;}
+    .main-box h1 {margin-bottom: 0;}
+    .main-box ul{margin-top: 3px; margin-bottom: 1px;}
+    .main-box li {line-height: 44px;}
+}
 @media only screen and (max-width: 1500px) { 
     .img-fluid2 {
         max-width: 674px;
@@ -299,16 +450,23 @@ small {	font-size: .7em; }
         line-height: 47px;}
     .main-box .li1:before{left: 45px;}
     .main-box h1 {
-        margin-bottom: 20px;}
+        margin-bottom: 10px;}
+
+}
+@media only screen and (max-height: 730px) and (max-width: 1500px){
+    .img-fluid {width: 27vw;}
+    .main-box .li1:before {left: -19px;}
 
 }
 @media only screen and (max-width: 1450px) { 
     .main-box h1 {
-        font-size: 58px;
+        font-size: 57px;
         color: #c51868;
-        line-height: 60px;
+        line-height: 57px;
+        margin-bottom: 1px;
         width: 90%;}
     .img-fluid {width: 35vw;}
+    .col-lg-5 a {margin-top: 1px;}
 
 }
 @media only screen and (max-height: 900px) and (max-width: 1450px){
@@ -317,6 +475,15 @@ small {	font-size: .7em; }
         font-size: 57px;
         line-height: 56px;}
     .main-box li {line-height: 45px;}
+}
+@media only screen and (max-height: 778px) and (max-width: 1450px){
+    .main-box h1 {
+        margin-bottom: 0;
+        font-size: 53px;
+        line-height: 53px;}
+    .img-fluid {
+        width: 31vw;}
+
 }
 @media only screen and (max-width: 1400px) { 
     .img-fluid2 {
@@ -341,7 +508,20 @@ small {	font-size: .7em; }
 
 
 }
-@media only screen and (max-height: 768px) and (max-width: 1366px){
+@media only screen and (max-height: 770px) and (max-width: 1450px){
+    .main-box .li1:before {
+        left: -22px;}
+    .main-box ul {
+        margin-bottom: 2px;
+        margin-top: 0;}
+    .main-box h1 {
+        margin-bottom: 0;
+        font-size: 48px;
+        line-height: 48px;}
+    .img-fluid {
+        width: 30vw;}
+}  
+@media only screen and (max-height: 770px) and (max-width: 1370px){
     .img-fluid {
         width: 30vw;}
     .main-box li {
@@ -351,8 +531,30 @@ small {	font-size: .7em; }
         font-size: 34px;
         margin-top: 0;}
     .main-box ul{margin-bottom: 5px;}
-
-
+    .main-box h1 {
+        margin-bottom: 0;
+        font-size: 51px;
+        line-height: 51px;}
+    .img-fluid {width: 32vw;}
+    .main-box ul {margin-top: 4px;}
+}
+@media only screen and (max-height: 730px) and (max-width: 1370px){
+    .main-box h1 {
+        margin-bottom: 0;
+        font-size: 46px;
+        line-height: 48px;
+        width: 100%;}
+}
+@media only screen and (max-height: 655px) and (max-width: 1370px){
+    .img-fluid2 {max-width: 608px;}
+}
+@media only screen and (max-height: 630px) and (max-width: 1370px){
+    .img-fluid {width: 30vw;}
+    .col-lg-5 a {font-size: 33px;}
+    .main-box h1 {
+        margin-bottom: 0;
+        font-size: 46px;
+        line-height: 44px;}
 }
 @media only screen and (max-width: 1350px) { 
     .main-box li:before {left: -34px;}
@@ -368,24 +570,30 @@ small {	font-size: .7em; }
         font-size: 35px;
         line-height: 45px;}
     .main-box h1 {
-        font-size: 55px;
-        line-height: 55px;}
+        font-size: 48px;
+        line-height: 48px;}
 
 }
+@media only screen and (max-height: 770px) and (max-width: 1280px){
+.col-lg-5 a { margin-top: 1px;}
 
+} 
 @media only screen and (max-width: 1280px) and (max-height: 800px){
     .main-box h1 {margin-bottom: 0;}
 }
 
 @media only screen and (max-width: 1280px) and (max-height: 720px){
     .main-box h1 {
-        margin-bottom: 0;}
-    .main-box h1 {
         margin-bottom: 0;
-        font-size: 50px;
+        font-size: 48px;
         line-height: 43px;}
     .col-lg-5 a {margin-top: 0;}
     .main-box li {line-height: 41px;}
+}
+@media only screen and (max-width: 129px) and (max-height: 720px){
+    .img-fluid {width: 30vw;}
+
+
 }
 @media only screen and (max-width: 1250px) { 
     .img-fluid2 {
@@ -399,27 +607,29 @@ small {	font-size: .7em; }
 }
 @media only screen and (max-width: 1180px) { 
     .main-box {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
         padding: 11px 8px 20px 0;}
     .main-box h1 {
-        font-size: 54px;
-        line-height: 51px;
-        margin-bottom: 10px;}
+        font-size: 45px;
+        line-height: 45px;
+        margin-bottom: 3px;}
     .main-box li {
-        font-size: 33px;
-        line-height: 41px;}
+        font-size: 31px;
+        line-height: 37px;}
     .img-fluid {width: 40vw;}
     .col-lg-5 a {
         font-size: 32px;
         line-height: 33px;
-        margin-top: 20px;}
+        margin-top: 0;}
     .img-fluid2 {
         max-width: 108%;
         position: absolute;
         left: 0;
         bottom: 10%;}
-
-
+    .main-box ul {margin-top: 0;}
+    .main-box li:before {top: 17px;}
 }
 
 
@@ -461,12 +671,13 @@ small {	font-size: .7em; }
         width: 100%;}
 
 }
-@media only screen and (max-width: 1024px) and (max-height: 768px){
-    .img-fluid {width: 35vw;}
+@media only screen and (max-width: 1324px) and (max-height: 768px){
+    .img-fluid {width: 30vw;}
     .col-lg-5 a { margin-top: 0;}
+    .main-box ul {margin-bottom: 0;}
 }
 
-@media only screen and (max-width: 1024px) and (max-height: 600px){
+@media only screen and (max-width: 1324px) and (max-height: 600px){
     .img-fluid {
         width: 30vw;}
     .main-box h1 {font-size: 46px;}
@@ -477,6 +688,41 @@ small {	font-size: .7em; }
         margin-bottom: 0;}
     .link-p{margin: 0;}
     .col-lg-5 a {margin-top: 0;}
+
+}
+@media only screen and (max-width: 1024px){
+    .link-p .main-link{text-decoration: underline;}
+    .link-p{border: none;} 
+}
+
+
+@media only screen and (max-width: 1024px) and (max-height: 500px){
+    .main-box h1 {
+        font-size: 38px;
+        line-height: 38px;}
+    .main-box li {
+        font-size: 25px;
+        line-height: 27px;}
+    .main-box ul {
+        margin: 0;}
+    .col-lg-5 { padding-top: 0;}
+    .main-box li:before {
+        top: 10px;}
+    .img-fluid {
+        width: 28vw;}
+
+} 
+@media only screen and (max-width: 1024px) and (max-height: 400px){
+    .main-box h1 {
+        font-size: 36px;
+        line-height: 38px;}
+    .main-box li {
+        font-size: 24px;
+        line-height: 26px;}
+    .col-lg-5 a {
+        font-size: 25px;
+        line-height: 28px;}
+    .img-fluid {width: 27vw;}
 
 }
 @media only screen and (max-width: 1000px) { 
@@ -490,7 +736,7 @@ small {	font-size: .7em; }
         padding-bottom: 10px;}
     .main-box li {
         font-size: 1.9rem;
-        line-height: 1.2;}
+        line-height: 1.15;}
 }
 @media only screen and (max-width: 960px) and (max-height: 600px){
     .img-fluid {
@@ -511,8 +757,8 @@ small {	font-size: .7em; }
     .main-box .li2:before {left: -24px;}
 }
 @media only screen and (max-width: 800px) { 
-    .img-fluid {	width: 40vw !important; }
-     .main, .main p{	font-size: .9em !important; }
+    .img-fluid {    width: 40vw !important; }
+     .main, .main p{    font-size: .9em !important; }
     .col-lg-5,
     .col-lgg-7{
         width: 100%;}
@@ -581,6 +827,15 @@ small {	font-size: .7em; }
         text-align: right;}
 
  }
+@media only screen and (max-width: 840px) { 
+    .col-lg-5 .link-p a{display: inline;}
+}
+@media only screen and (max-width: 800px) { 
+    .col-lg-5 .link-p a {
+        float: none;
+        text-align: right;}
+
+}
 @media only screen and (max-width: 775px) { 
     .main-box h1 {
         font-size: 43px;
@@ -627,8 +882,8 @@ small {	font-size: .7em; }
         margin-top: -43px;}
 }
 @media only screen and (max-width: 600px) { 
-    .img-fluid {	width: 50vw !important; } 
-    .main, .main p{	font-size: .9em !important; }
+    .img-fluid {    width: 50vw !important; } 
+    .main, .main p{ font-size: .9em !important; }
 }
 @media only screen and (max-width: 585px) { 
 .img-fluid2 {
@@ -694,8 +949,8 @@ small {	font-size: .7em; }
     .col-lg-5 a {font-size: 21px;}
 }  
 @media only screen and (max-width: 405px) { 
-    .img-fluid {	width: 80vw !important; } 
-    .main, .main p{	font-size: .9em !important; }
+    .img-fluid {    width: 80vw !important; } 
+    .main, .main p{ font-size: .9em !important; }
     .col-lgg-7 {height: 38%;}
     .col-lg-5 a {font-size: 20px;}
 .main-box li strong {
@@ -774,9 +1029,59 @@ small {	font-size: .7em; }
     #page-home {overflow: scroll;}
 
 }
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {  
+     .main-box li {
+         display: inline-block;}
+    .main-box ul  {display: table-cell;}    
+}
+
+.ie6 .main-box ul{display: table-cell;}  
+.ie7 .main-box ul{display: table-cell;}  
+.ie11 .main-box ul{display: table-cell;}  
+
+ IE10+
+ @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+     .main-box li {
+         display: inline-block;}
+    .main-box ul  {display: table-cell;}   
 
 
+ }
 
+ IE6,7,9,10
+ @media screen and (min-width: 640px), screen\9 {
+     .main-box li {
+         display: inline-block;}
+    .main-box ul  {display: table-cell;}     
+ }
+
+ IE6,7
+ @media screen\9 {
+     .main-box li {
+         display: inline-block;}
+    .main-box ul  {display: table-cell;}   
+ }
+
+ IE8
+ @media \0screen {
+     .main-box li {
+         display: inline-block;}
+    .main-box ul  {display: table-cell;}   
+ }
+
+ IE6,7,8
+ @media \0screen\,screen\9 {
+     .main-box li {
+         display: inline-block;}
+    .main-box ul  {display: table-cell;}   
+ }
+
+ IE9,10
+ @media screen and (min-width:0\0){
+     .main-box li {
+         display: inline-block;}
+    .main-box ul  {display: table-cell;}   
+ }
 
 
 
